# orbit

./: ARCHITECTURE_REVIEW.md  CLAUDE.md  Cargo.toml  ORB-FORMAT-SPEC.md  ORBIT-INTENT-LANGUAGE.md  TODO.md
docs/: scripting-migration-plan.md
src/: app.rs  lib.rs  main.rs
src/camera/: mod.rs  orbit_camera.rs
src/oil/: ast.rs  lexer.rs  mod.rs  parser.rs  types.rs
src/orb/: mesh.rs  mod.rs  read.rs  schema.rs  transform.rs  types.rs  uuid.rs  write.rs
src/primitives/: cube.rs  cylinder.rs  edge.rs  face.rs  mod.rs  operations.rs  vertex.rs
src/renderer/: camera.rs  mod.rs  pipeline.rs  scene.rs  screenshot.rs  state.rs  vertex.rs
src/shaders/: basic.wgsl  shadow.wgsl
src/solver/: layout.rs  mod.rs  structure.rs  style.rs  types.rs
src/spatial/: aabb.rs  clash.rs  mod.rs  occupancy.rs  rtree.rs
src/ui/: measurement_ui.rs  mod.rs
src/units/: conversions.rs  measurement.rs  mod.rs
