[package]
name = "orbit"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.12" # Latest stable Bevy version
nalgebra = "0.32" # For mathematical operations
thiserror = "1.0" # For better error handling
serde = { version = "1.0", features = ["derive"] } # For serialization
egui = "0.23" # For UI components
bevy_egui = "0.23" # Bevy integration with egui
